# maths-python

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  GEMINI.md  README.md  Random.ipynb  Untitled.ipynb  launch_streamlit_app.sh  pyproject.toml
.claude/commands/: marimo-solution.md
.claude/skills/: new-page.md
.github/workflows/: deploy-ec2.yml
app/: .gitignore  main.py  maths_logic.py  maths_python.py  utils.py
app/pages/: 099_latex_examples.py  100_calculus.py  100_differentiation.py  100_differentiation_sum_and_difference_rule.py  101_differentiation_power_rule.py  102_differentiation_examples.py  102_differentiation_finite_differences.py  102_differentiation_in_python.py  103_differentiation_chain_rule.py  104_differentiation_exponential.py  105_differentiation_trig_functions.py  106_differentiation_product_rule.py  107_differentiation_quotient_rule.py  108_differentiation_parametric.py  109_differentiation_implicit.py  110_differentiation_other.py  111_differentiation_partial.py  111_differentiation_stochastic.py  111_differentiation_stochastic_.py  200_integration.py  201_integration_examples.py  201_integration_in_python.py  202_integration_parametric.py  203_integration_exponential.py  204_integration_trig_functions.py  205_integration_reverse_chain_rule.py  206_integration_by_substitution.py  207_integration_by_parts.py  208_integration_other.py  700_linear_algebra.py  701_linear_algebra_vector_operations.py  702_linear_algebra_matrix_operations.py  703_linear_algebra_matrix_multiplication.py  704_linear_algebra_determinants.py  705_linear_algebra_matrix_inversion.py  705_linear_algebra_matrix_inversion_.py  706_linear_algebra_eigenvalues_eigenvectors.py  706_linear_algebra_identity_matrices.py  710_linear_algebra_system_of_equations.py  710_linear_algebra_system_of_equations_.p  (+26 more)
docker/: Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml
tests/: test_maths_logic.py  test_snippets.py  test_utils.py
(+14 files in other folders)
