[project]
name = "maths-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "antlr4-python3-runtime==4.11",
    "black>=25.1.0",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.3.5",
    "marimo>=0.11.13",
    "mathml2latex>=0.2.12",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "ruff>=0.9.9",
    "scipy>=1.15.2",
    "streamlit>=1.42.2",
    "sympy>=1.13.3",
    "ty>=0.0.1a1",
]
