[project]
name = "maths-python"
version = "0.1.0"
description = "Educational interactive Streamlit web application providing Python code snippets for mathematics and statistics"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
    "streamlit>=1.51.0",
    "sympy>=1.13.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "antlr4-python3-runtime==4.11",
    "black[jupyter]>=26.1.0",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.3.5",
    "marimo>=0.17.8",
    "mathml2latex>=0.2.12",
    "networkx>=3.4.2",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.5",
    "ty>=0.0.1a1",
]
